don't ping server when connecting